# codechecker_bazel

./: MODULE.bazel
.ci/micromamba/: uninstall.sh
.ci/mise/: config.toml
.github/workflows/: micromamba.yaml  mise.yaml
.micromamba/: init.sh
src/: code_checker.bzl  codechecker.bzl  common.bzl  per_file.bzl
test/unit/legacy/: BUILD
