"""
Copyright 2023 Ericsson AB

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
"""

module(name = "rules_codechecker")

# C/C++ rules: cc_library, cc_binary
bazel_dep(name = "rules_cc", version = "0.2.14")

# Python rules and toolchain
bazel_dep(name = "rules_python", version = "1.9.0")
python_extension = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "default_python_tools",
)
python_extension.toolchain(python_version = "3.11", is_default = True)
use_repo(python_extension, "default_python_tools")

# CodeChecker support
codechecker_extension = use_extension(
    "//src:tools.bzl",
    "module_register_default_codechecker",
)
use_repo(codechecker_extension, "default_codechecker_tools")
